# ML

./: pyproject.toml  readme.md
core/: __init__.py  functional.py  optim.py  readme.md  tensor.py
data/: readme.md  showdata.ipynb  view.py
energy/: __init__.py  monitor.py  nas.py  pruning.py  readme.md  regularize.py
examples/: CNN_test.py  mnist.ipynb  mnist_CNN.py  mnist_MLP.py  mnist_formal.py  mnist_hand.py  mnist_test.py  readme.md  test_1.py  test_2.py  test_3.py  test_backward.py
nn/: __init__.py  base.py  init.py  layer.py  model.py  readme.md
tests/: test_core_functional.py  test_core_optim.py  test_core_tensor.py  test_energy.py  test_energy_monitor.py  test_energy_nas.py  test_energy_pruning.py  test_energy_regularize.py  test_nn_layer.py  test_nn_model.py  test_tensor_name.py
